src/internal/vm/snapshots/hebi__internal__vm__tests__global_builtin_functions__to_int__bad_input.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
to_int({})


# Result:
runtime error: cannot convert `<table>` to an int
