src/internal/vm/snapshots/hebi__internal__vm__tests__global_builtin_functions__to_int__float.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
to_int(10.5)


# Result:
Int(
    10,
)
